# astlua

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  install_package  lua-precedence.txt  lua.bnf
include/: algorithm.hpp  functional.hpp  lexer.hpp  position.hpp  token.hpp  token_info.hpp
include/ast/: ast.hpp
include/lexer/: char_utils.hpp  commons.hpp  enum_rep.hpp  lexer.hpp  parse_identifier.hpp  parse_keyword.hpp  parse_number.hpp  parse_string.hpp  parse_symbol.hpp  skip_non_tokens.hpp  token.hpp  token_info.hpp
include/parser/: ast.hpp  combinator.hpp  parse_expresssion.hpp  parse_terminal.hpp  parsed.hpp  parser.hpp
include/token/: enum_rep.hpp  token.hpp  token_info.hpp
src/: CMakeLists.txt  main.cpp
src/astlua/ast/: ast.cpp
src/astlua/lexer/: token.cpp
src/astlua/parser/: ast.cpp
src/astlua/token/: token.cpp
tests/: CMakeLists.txt  doctest.hpp
tests/lexer/: lexer_test.cpp  parse_decimal_test.cpp  parse_hex_test.cpp  parse_identifier_test.cpp  parse_keyword_test.cpp  parse_long_string_test.cpp  parse_prefix_test.cpp  parse_short_string_test.cpp  parse_symbol_test.cpp  parser_number_test.cpp  skip_non_tokens_test.cpp  token_conversion_test.cpp
tests/parser/: combinator_test.cpp  parse_expression_test.cpp  parse_terminal_test.cpp  parser_test.cpp
